Closed Bug 1479631 Opened 7 years ago Closed 7 years ago

Fix media.memory_caches_combined_limit_kb value on Android

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- wontfix
firefox62 --- fixed
firefox63 --- fixed

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

Details

(Keywords: regression)

Attachments

(1 file)

It was accidentally changed from 524288 to 32768 on Android by bug 1448222. This commit changes it back.
Comment on attachment 8996153 [details] [diff] [review] Fix media.memory_caches_combined_limit_kb value on Android Review of attachment 8996153 [details] [diff] [review]: ----------------------------------------------------------------- LGTM. Thanks!
Attachment #8996153 - Flags: review?(drno) → review+
Pushed by nnethercote@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4d8ba2d6bd35 Fix media.memory_caches_combined_limit_kb value on Android. r=drno
Comment on attachment 8996153 [details] [diff] [review] Fix media.memory_caches_combined_limit_kb value on Android Approval Request Comment [Feature/Bug causing the regression]: Bug 1448222 (Firefox 61). [User impact if declined]: Android users get the wrong value for the media.memory_caches_combined_limit_kb pref. [Is this code covered by automated tests?]: Not sure. [Has the fix been verified in Nightly?]: No. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: No. [Why is the change risky/not risky?]: It reverts the value of a single pref to what it was in Firefox 60 (and earlier versions). [String changes made/needed]: None.
Attachment #8996153 - Flags: approval-mozilla-beta?
Rank: 15
Priority: -- → P2
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Comment on attachment 8996153 [details] [diff] [review] Fix media.memory_caches_combined_limit_kb value on Android Fixes a recent regression, Beta62+
Attachment #8996153 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: