Bug 1479631 - Fix media.memory_caches_combined_limit_kb value on Android. r=drno

It was accidentally changed from 524288 to 32768 on Android by bug 1448222.
This commit changes it back.

--HG--
extra : rebase_source : 9181928dccf0cfcd0f70c1c3840d43c378f38ca4